--- a/src/main/resources/templates/personlist.html
+++ b/src/main/resources/templates/personlist.html
@@ -145,7 +145,7 @@
     </tbody>
 </table>
 <footer>
-    <p>&copy; 2024 CS Ltd. All rights reserved.</p>
+    <p>&copy; 2024 igopm. All rights reserved.</p>
 </footer>
 </body>
 </html>
